--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pipe-server",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Pipe Sever",
   "repository": {
     "type": "git",
@@ -12,8 +12,9 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
-    "hapi": "^13.4.1",
-    "hapi-plugin-co": "^0.9.0",
-    "mongoose": "^4.5.3"
+    "boom": "4.2.0",
+    "hapi": "16.0.1",
+    "hapi-plugin-co": "0.9.4",
+    "mongoose": "4.7.2"
   }
 }
