--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "boom": "4.2.0",
     "hapi": "16.0.1",
     "hapi-plugin-co": "0.9.4",
+    "joi": "^10.0.6",
     "mongoose": "4.7.2"
   }
 }
